# Utils

./: HLint.hs  Square.hs  SwiftAST.txt  TAGS  Tricks.py  a.hs  anagrams.hs  r.hs  recscheme.md  t.hs
Extras.hsproj/: HSparse.hs  parse.cabal
RecScheme.hsproj/: BST.hs  Expr.hs  Peano.hs  RecScheme.cabal  RecScheme.hs  Schemes.hs  Square.hs  _BST.hsplay  _Square.hsplay
Tricks.hsproj/: AppFunc.hs  Bool.hs  Comonad.hs  Folds.hs  Function.hs  Maps.hs  NewText.txt  Numbers.hs  Odds.hs  Parse.hs  Prob.hs  Protolude.hs  RecScheme.hs  Tricks.cabal  Tricks.hs  Types.hs  _Comonad.hsplay  _Folds.hsplay  _Maps.hsplay  _Numbers.hsplay  _Odds.hsplay  _Parse.hsplay  _Prob.hsplay  _Protolude.hsplay  _RecScheme.hsplay  _Tricks.hsplay  _Types.hsplay
