name: Tricks
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    NewText.txt
Executable Tricks
  main-is: Tricks.hs
  buildable: True
  build-depends:
      base -any,
      free -any,
      containers -any,
      recursion-schemes -any,
      mtl -any,
      text -any
  other-modules:
      Parse
      Numbers
      Folds
      Types
      Maps
      Bool
      Function
      AppFunc
      Comonad
      RecScheme
      Odds
