name: Tricks
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    NewText.txt
Executable Tricks
  main-is: Tricks.hs
  buildable: True
  build-depends:
      base -any,
      safe -any,
      containers -any,
      QuickCheck -any,
      mtl -any,
      recursion-schemes -any
  other-modules:
      Protolude
      RecScheme
      Odds
